added click to fire

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,11 +1,2 @@
-/Bullet.class
-/DrawObjects$1.class
-/DrawObjects.class
-/Field.class
-/GameManager.class
+/GraphicsManager$2.class
 /GraphicsManager$1.class
-/GraphicsManager.class
-/Movable.class
-/Tank.class
-/TankAI.class
-/TankGame.class
